Fix Book; Use accessibility context; Dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,7 @@ h1 {
   @apply uppercase;
   @apply font-bold;
 }
+
+.dark {
+  color: #ece7d1;
+}
